tdf#119760 writerfilter: cell border priority over tblBorder

If the tblBorder does not exist, or if first row's
left-border has a different sized border than the
overall table settings, use the cell's lineWidth
value to determine the the spacing needed.

The potential regression here is the spacing given to
the cells. However, the current calculation is totally
wrong (it needs to be based on per-cell, not on some
table-level default) and so it was "wrong" a different
way before. The unit test shows this visually.

Plus, MS Office version are inconsistent in handling this
unit test. The latest versions base the position on the
*last* row and not the first row.

The key reason for making this change is to support a
table that doesn't have a table default, needed to
fix tdf#92026.

Change-Id: I319513a2f5550c1527dc564fb8b3806d1251a0c2